hphp/hack/test/typecheck/class_abstract_final_9.php.exp
File "class_abstract_final_9.php", line 8, characters 19-21:
`Foo` is uninstantiable (Typing[4002])
File "class_abstract_final_9.php", line 3, characters 22-24:
Declaration is here
