hphp/hack/test/typecheck/class_abstract_final_9.php
<?hh // partial

abstract final class Foo {
  public static function bar() {}
}

class C {
  private static ?Foo $member;
}
